testsuite/tests/typecheck/should_fail/T14761b.stderr

T14761b.hs:5:19: error: Operator applied to too few arguments: !
